cloud/kubernetes/mytodo-openshift.yaml
---
# Application to deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytodo
  namespace: default
spec:
  replicas: 3 # tells deployment to run Xs pods
  selector:
    matchLabels:
      app: mytodo
  template:
    metadata:
      labels:
        app: mytodo
        tier: frontend
    spec:
      containers:
      - name: mytodo
        # image: lionelmace/mytodo:lts-alpine3.12
        image: de.icr.io/mace/mytodo:lts-alpine3.14
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m     # 250 millicores = 1/4 core
            memory: 128Mi # 128 MB
          limits:
            cpu: 500m
            memory: 384Mi
        livenessProbe:
          httpGet:
            path: /healthcheck/
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 2        
        # envFrom:
        # - secretRef:
        #     name: database-credentials

---
apiVersion: v1
kind: Service
metadata:
 annotations:
  # service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
  service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
 labels:
  app: mytodo
  tier: frontend
 name: mytodo-service
 namespace: default
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mytodo
    tier: frontend
    # deploymentconfig: nodejs-sample
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mytodo-service
  namespace: default
  labels:
    app: mytodo
    tier: frontend
spec:
  host: >-
    mytodo-service-default.iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: mytodo-service
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mytodo-ingress
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: "public-iks-k8s-nginx"
# spec:
#   tls:
#   - hosts:
#     - iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
#     secretName: iro-483cccd2f0d38128dd40d2b711142ba9-0000
#   rules:
#   - host: iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: mytodo
#             port:
#               number: 8080
