cloud/kubernetes/mytodo.yaml
---
# Application to deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytodo
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mytodo
  template:   # create pods using pod definition in this template
    metadata:
      labels:
        app: mytodo
        tier: frontend
    spec:
      containers:
      - name: mytodo
        image: de.icr.io/mace/mytodo:lts-alpine3.18
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m     # 250 millicores = 1/4 core
            memory: 128Mi # 128 MB
          limits:
            cpu: 500m
            memory: 384Mi
        livenessProbe:
          httpGet:
            path: /healthcheck/
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 2        
        # envFrom:
        # - secretRef:
        #     name: database-credentials

---
# Service to expose frontend
apiVersion: v1
kind: Service
metadata:
  name: mytodo
  namespace: default
  labels:
    app: mytodo
    tier: frontend
spec:
    ports:
    - protocol: TCP
      port: 8080
    selector:
      app: mytodo
      tier: frontend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytodo-ingress
  namespace: default
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
spec:
  ingressClassName: public-iks-k8s-nginx
  # ingressClassName: private-iks-k8s-nginx
  tls:
    - hosts:
      - app.icn-yh3gea-iks-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
      secretName: icn-yh3gea-iks-483cccd2f0d38128dd40d2b711142ba9-0000
  rules:
  - host: app.icn-yh3gea-iks-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mytodo
            port:
              number: 8080
